# helioscope

./: Cargo.toml  README.md  helioscope.toml  mise.toml
.cargo/: config.toml
ferrview-collector/src/http/ui/: templates.rs
ferrview-collector/src/http/ui/views/: home.rs  node.rs
ferrview-collector/templates/: base.html  home.html  node.html
ferrview-node/: ferrview-node.toml
ferrview-node/src/: config.rs  main.rs
ferrview-node/src/probes/: mod.rs
ferrview-node/src/probes/procfs/: forks.rs  mod.rs
helioscope-collector/: Cargo.toml  helioscope-collector.toml
helioscope-collector/src/: main.rs
helioscope-collector/src/charts/: renderer.rs
helioscope-collector/src/http/: charts.rs  handlers.rs  mod.rs  response.rs  server.rs  types.rs  ui.rs  validate.rs
helioscope-collector/src/http/handlers/: api.rs  charts.rs  mod.rs  web.rs
helioscope-collector/src/http/ui/: components.rs  helpers.rs  layout.rs  mod.rs  models.rs  styles.rs
helioscope-collector/src/http/ui/views/: error.rs  home.rs  mod.rs  node.rs
helioscope-collector/src/store/: db.rs  mod.rs  queries.rs  reader.rs  writer.rs
helioscope-common/: Cargo.toml
helioscope-common/src/: lib.rs
helioscope-node/: Cargo.toml  helioscope-node.toml
helioscope-node/src/: config.rs  main.rs
helioscope-node/src/client/: retry.rs
helioscope-node/src/probes/sysinfo/: cpu.rs
os_packages/alpine/ferrview-collector/: APKBUILD  ferrview-collector.confd  ferrview-collector.initd  ferrview-collector.post-install
os_packages/alpine/ferrview-node/: APKBUILD  ferrview-node.confd  ferrview-node.initd  ferrview-node.post-install  ferrview-node.pre-install
src/: main.rs
src/probes/sysinfo/: cpu.rs  mem.rs  temp.rs
