[workspace]
resolver = "2"
members = [
  "helioscope-collector",
  "helioscope-common",
  "helioscope-node",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "A lightweight system monitoring tool with node agents and collector"
repository = "https://github.com/l1x/helioscope"
license = "AGPL-3.0"

[workspace.dependencies]
argh = { version = "0.1" }
basic-toml = { version = "0.1" }
helioscope-common = { path = "../helioscope-common" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2" }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "std"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "time"
] }

[profile.bench]
lto = "thin"
codegen-units = 16

[profile.dev]
lto = "thin"
codegen-units = 8

[profile.release]
opt-level = "s"
debug = "full"
split-debuginfo = "packed"
strip = "symbols"
lto = true
panic = "abort"
incremental = true
codegen-units = 1
