[package]
name = "helioscope-collector"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argh.workspace = true
bytes = { version = "1.0" }
helioscope-common = { path = "../helioscope-common" }
http-body-util = { version = "0.1" }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde.workspace = true
serde_json = { version = "1" }
sqlx = { version = "0.8.6", features = ["sqlite"] }
thiserror.workspace = true
time.workspace = true
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync"
] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
