[package]
name = "helioscope-collector"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argh.workspace = true
basic-toml.workspace = true
bytes = { version = "1.0" }
helioscope-common = { path = "../helioscope-common" }
http-body-util = { version = "0.1" }
hyper = { version = "1.0", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
plotters = { version = "0.3", default-features = false, features = [
  "svg_backend"
] }
serde.workspace = true
serde_json = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror.workspace = true
time.workspace = true
tokio = { version = "1", default-features = false, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync"
] }
tracing.workspace = true
tracing-subscriber.workspace = true
